added styling for body and positioning for main header

--- a/Preview-Card/index.html
+++ b/Preview-Card/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
     <title>Preview Card</title>
 </head>
 <body>
     <div class="preview-card-body">
-        
+
         <div class="preview-card-photo">
-            <img />
+            <img src="images-folder/image-equilibrium.jpg" class="preview-card-main-image" />
         </div>
 
         <div class="preview-card-text">
