adding new colors to font and resized box for preview card

--- a/Preview-Card/index.html
+++ b/Preview-Card/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +9,33 @@
     <link rel="stylesheet" href="style.css">
     <title>Preview Card</title>
 </head>
+
 <body>
     <div class="preview-card-body">
-
         <div class="preview-card-photo">
             <img src="images-folder/image-equilibrium.jpg" class="preview-card-main-image" />
+
+            <div class="preview-card-text">
+                <h2 class="preview-card-header">Equilibrium #3429</h2>
+                <h4 class="preview-card-description">Our Equilibrium collection promotes balance and calm.</h4>
+            
+                <div class="preview-card-small-text-group">
+                    <p class="size-amount-text"></p>
+                    <p class="time-frame-text"></p>
+                </div>
+            </div>
+
+            <div class="horizontal-line"></div>
+            
+            <div class="preview-card-bottom-text">
+                <img />
+                <p class="preview-card-creator-text"></p>
+            </div>
         </div>
-
-        <div class="preview-card-text">
-            <h2 class="preview-card-header"></h2>
-            <h6 class="preview-card-description"></h6>
-        </div>
-
-        <div class="preview-card-small-text-group">
-            <p class="size-amount-text"></p>
-            <p class="time-frame-text"></p>
-        </div>
-
-        <div class="horizontal-line"></div>
-
-        <div class="preview-card-bottom-text">
-            <img />
-            <p class="preview-card-creator-text"></p>
-        </div>
-
         <footer class="preview-card-footer">
             <p class="preview-card-footer-text"></p>
         </footer>
     </div>
 </body>
+
 </html>
