added floats to smaller text under main header and subheader

--- a/Preview-Card/index.html
+++ b/Preview-Card/index.html
@@ -20,14 +20,18 @@
                 <p class="preview-card-description">Our Equilibrium collection promotes balance and calm.</p>
             
                 <div class="preview-card-small-text-group">
-                    <img src="images-folder/icon-ethereum.svg"/><p class="size-amount-text">0.041 ETH</p>
-                    <img src="images-folder/icon-clock.svg"/><p class="time-frame-text">3 Days Left</p>
+                    <div class="preview-card-size-text">
+                        <img src="images-folder/icon-ethereum.svg" class="preview-card-svg1"/><p class="size-amount-text">0.041 ETH</p>
+                    </div>
+                    <div class="preview-card-3days-text">
+                        <img src="images-folder/icon-clock.svg" class="preview-card-svg2"/><p class="time-frame-text">3 Days Left</p>
+                    </div>
                 </div>
                 
-                <div class="horizontal-line"></div>
+                <hr class="horizontal-line"></hr>
 
                 <div class="preview-card-bottom-text">
-                    <img src="images-folder/image-avatar.png" class="preview-card-avatar"/><p class="preview-card-creator-text">Creation of <span>Jules Wyvren</span></p>
+                    <img src="images-folder/image-avatar.png" class="preview-card-avatar"/><p class="preview-card-creator-text">Creation of <span class="preview-card-creator-blue-text">Jules Wyvren</span></p>
                 </div>
             </div>       
         </div>
